before AI editing1

--- a/live.html
+++ b/live.html
@@ -30,20 +30,20 @@
       <th class="lang" data-ja="詳細" data-en="Details"></th>
     </tr>
     <tr>
-      <td>2025/12/10</td>
-      <td>Blue Note Tokyo</td>
-      <td><a href="#">Link</a></td>
+      <td>2026/4/4（予定）</td>
+      <td>池袋 Apple Jump</td>
+      <td>変更になる場合があります。詳細はアーティストSNS、<a href="https://applejump.net/">お店のホームページ</a>でご確認ください。</a></td>
     </tr>
     <tr>
-      <td>2026/01/22</td>
-      <td>Cotton Club</td>
-      <td><a href="#">Link</a></td>
+      <td>未定</td>
+      <td>未定</td>
+      <td><a href="#"></a></td>
     </tr>
   </table>
 </main>
 
 <footer>
-  <p>&copy; 2025 Duo Name</p>
+  <p>&copy; 2025 ENYANA</p>
 </footer>
 
 </body>
