--- a/contact.html
+++ b/contact.html
@@ -23,19 +23,13 @@
 </header>
 
 <main>
-  <p class="lang" data-ja="出演依頼・お問い合わせは以下までご連絡ください。" data-en="For booking or inquiries, please contact us below."></p>
-  <p><a href="mailto:info@duoname.com">info@duoname.com</a></p>
 
-  <h3 class="lang" data-ja="SNS" data-en="Social Media"></h3>
-  <p>
-    <a href="https://instagram.com/duoname">Instagram</a> |
-    <a href="https://twitter.com/duoname">Twitter</a> |
-    <a href="https://www.youtube.com/@duoname">YouTube</a>
-  </p>
+  <h4 class="lang" data-ja="出演依頼・お問い合わせはアーティストSNSまでお願いいたします。デュオに関するお問い合わせはどちらのメンバーにいただいてもかまいません。" data-en="For performance requests and inquiries, please contact the artist via their social media. Inquiries regarding the duo may be directed to either member."></h4>
+
 </main>
 
 <footer>
-  <p>&copy; 2025 Duo Name</p>
+  <p>&copy; 2025 ENYANA</p>
 </footer>
 
 </body>
