--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
 <body>
 
 <header>
-  <h1 class="lang" data-ja="ENYANA" data-en="ENYANA"></h1>
-  <nav>
-    <a href="index.html" class="lang" data-ja="ホーム" data-en="Home"></a>
-    <a href="live.html" class="lang" data-ja="ライブ" data-en="Live"></a>
-    <a href="contact.html" class="lang" data-ja="コンタクト" data-en="Contact"></a>
-  </nav>
+  <div class="header-inner">
+    <h1 class="lang" data-ja="ENYANA" data-en="ENYANA"></h1>
+    <nav>
+      <a href="index.html" class="lang" data-ja="ホーム" data-en="Home"></a>
+      <a href="live.html" class="lang" data-ja="ライブ" data-en="Live"></a>
+      <a href="contact.html" class="lang" data-ja="コンタクト" data-en="Contact"></a>
+    </nav>
+  </div>
   <div class="lang-switch">
     <button onclick="setLanguage('ja')">日本語</button>
     <button onclick="setLanguage('en')">English</button>
@@ -30,9 +32,7 @@
     <p class="lang"
        data-ja="米国バークリー音楽大学卒の先輩後輩DUO ピアノとボーカルのシンプルな編成で、ブラジル、キューバ、アルゼンチン、メキシコなど、中南米の音楽を彩り豊かに表現します。
 2025年2月1日待望の1stアルバムを全国リリース！ 奥深く美しいバラードから、軽快なスキャット曲、オリジナル曲まで、心に響く音楽をお届けします。"
-       data-en="A senior-junior duo who graduated from Barclay College of Music in the United States. With a simple piano and vocal arrangement, they colorfully express the music of Central and South America, including Brazil, Cuba, Argentina, and Mexico.
-
-Their long-awaited first album will be released nationwide on February 1, 2025! From deep and beautiful ballads to lighthearted scat songs and original compositions, they deliver music that resonates in the heart."></p>
+       data-en="A senior-junior duo who graduated from Berklee College of Music in the U.S. With a simple piano and vocal arrangement, they express the rich colors of Latin American music. Their first album will be released on February 1, 2025!"></p>
   </div>
 </section>
 
@@ -57,7 +57,7 @@ Their long-awaited first album will be released nationwide on February 1, 2025! 
 
   <section id="cd" class="fade-in">
     <h2 class="lang" data-ja="CD情報" data-en="CD Info"></h2>
-    <a href="https://yukapiano.base.shop/items/96585669" target="_blank">
+    <a href="https://yukapiano.base.shop/items/96585669" target="_blank" rel="noopener noreferrer">
       <img src="assets/enyanaCD.jpg" alt="CD cover" width="200">
       <p class="lang" data-ja="CDを購入する" data-en="Buy our CD"></p>
     </a>
@@ -66,38 +66,34 @@ Their long-awaited first album will be released nationwide on February 1, 2025! 
   <section id="members" class="fade-in">
     <h2 class="lang" data-ja="メンバー紹介" data-en="Members"></h2>
     <div class="member-row">
+
       <div class="member">
-        <img src="assets/member1.jpg" alt="Member 1" width="150">
         <h3>EMiKO VOiCE (vo)</h3>
-        <p class="lang" data-ja="5歳からNHK専属の児童合唱団に所属し、テレビ・ラジオに多数出演。
-早稲田大学卒業後、米国バークリー音楽大学に奨学金を得て留学。ボーカルを、Luciana Souza、Lisα Thorson、Kevin Mahogany、Livingston Taylor、スキャットをBob Stloff, Sheila Jordanに師事。在学中からボストン、ニューヨークでジャズシンガーとして活躍した。
-
-’03年帰国。ギタリスト助川太郎とボサノバユニット「メヲコラソン」でコロンビアよりメジャーデビュー。その後、ジャズとブラジルの二刀流歌手の特性を活かした様々なプロジェクトを展開。日本全国はもちろん、ニューヨーク、韓国、ブラジル、ポルトガルなど、海外での演奏活動も積極的に行っている。"
-           data-en="She joined NHK's exclusive children's choir at the age of five and appeared on numerous television and radio programs.
-After graduating from Waseda University, she received a scholarship to study at the Berklee College of Music in the United States. She studied vocals with Luciana Souza, Lisα Thorson, Kevin Mahogany, and Livingston Taylor, and scat singing with Bob Stloff and Sheila Jordan. While still a student, she was active as a jazz singer in Boston and New York.
-She returned to Japan in 2003. She made her major debut with Columbia Records as part of the bossa nova unit “Meu Coracao” with guitarist Taro Sukegawa. Since then, she has been involved in various projects that utilize her unique dual talents as a jazz and Brazilian singer. She actively performs not only throughout Japan, but also overseas in places such as New York, South Korea, Brazil, and Portugal."></p>
         <p class="sns-links">
-          <a href="https://www.instagram.com/emiko_voice">Instagram</a> |
-          <a href="https://www.youtube.com/channel/UCB4Pq8kYMxBcg6kEQ9uMgZg">YouTube</a> |
-          <a href="https://www.facebook.com/emiko.voice">Facebook</a>
+          <a href="https://www.instagram.com/emiko_voice" target="_blank" rel="noopener noreferrer">Instagram</a> |
+          <a href="https://www.youtube.com/channel/UCB4Pq8kYMxBcg6kEQ9uMgZg" target="_blank" rel="noopener noreferrer">YouTube</a> |
+          <a href="https://www.facebook.com/emiko.voice" target="_blank" rel="noopener noreferrer">Facebook</a>
         </p>
+        <p class="lang" data-ja="5歳からNHK専属の児童合唱団に所属し、テレビ・ラジオに多数出演。
+早稲田大学卒業後、米国バークリー音楽大学に奨学金を得て留学。ボーカルをLuciana Souza、Kevin Mahoganyらに師事。在学中からボストン、ニューヨークで活躍。
+’03年帰国後、ボサノバユニット「メヲコラソン」でメジャーデビュー。日本全国・海外で精力的に活動中。"
+           data-en="Joined NHK’s children’s choir at age five and appeared on many TV/radio shows. After graduating from Waseda, studied at Berklee College of Music. Debuted with Columbia’s “Meu Coracao” and performs actively in Japan and abroad."></p>
       </div>
 
       <div class="member">
-        <img src="assets/member2.jpg" alt="Member 2" width="150">
-        <h3>柳原由佳 (pf)</h3>
-        <p class="lang" data-ja="幼少期からJazz, Bossa Nova, Pops 等様々な音楽に触れる。
-米国バークリー音楽大学 卒業。ボストン、ニューヨーク、ペンシルバニアにてライブやレコーディングを行う。
-帰国後は自ら率いるピアノトリオの他、ジャンルを問わず様々なバンドやレコーディングに参加。現在は関西関東と２つ拠点を中心に、フランス、シンガポールなど各国でのライブ演奏やツアーも頻繁に行っている。"
-           data-en="From childhood, he was exposed to various types of music, including jazz, bossa nova, and pop.
-He graduated from the Berklee College of Music in the United States. He performed live and recorded in Boston, New York, and Pennsylvania.
-After returning to Japan, he participated in various bands and recordings across genres, in addition to leading his own piano trio. Currently based primarily in the Kansai and Kanto regions, he also frequently performs live and tours in countries such as France and Singapore."></p>
+        <h3>
+          <span class="lang" data-ja="柳原由佳" data-en="Yuka Yanagihara"></span> (pf)
+        </h3>
         <p class="sns-links">
-          <a href="https://www.instagram.com/yukayanagiharapiano/">Instagram</a> |
-          <a href="https://www.youtube.com/@YukaYanagiharaPiano">YouTube</a> |
-          <a href="https://www.facebook.com/yuka.yanagihara.79">Facebook</a>
+          <a href="https://www.instagram.com/yukayanagiharapiano/" target="_blank" rel="noopener noreferrer">Instagram</a> |
+          <a href="https://www.youtube.com/@YukaYanagiharaPiano" target="_blank" rel="noopener noreferrer">YouTube</a> |
+          <a href="https://www.facebook.com/yuka.yanagihara.79" target="_blank" rel="noopener noreferrer">Facebook</a>
         </p>
+        <p class="lang" data-ja="幼少期からJazz, Bossa Nova, Pops 等様々な音楽に触れる。
+米国バークリー音楽大学卒業。ボストン、ニューヨークで演奏後、帰国。現在は関西・関東を中心に全国・海外で活動。"
+           data-en="Exposed to jazz, bossa nova, and pop music from childhood. Graduated from Berklee College of Music. Performs across Japan and internationally, based in Kansai and Kanto."></p>
       </div>
+
     </div>
   </section>
 </main>
@@ -108,3 +104,4 @@ After returning to Japan, he participated in various bands and recordings across
 
 </body>
 </html>
+
