VScode push check

--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
 <main>
   <section class="contact-section fade-in">
     <p class="lang"
-       data-ja="出演依頼・お問い合わせはアーティストSNSまでお願いいたします。デュオに関するお問い合わせはどちらのメンバーにいただいてもかまいません。"
+       data-ja="出演依頼・お問い合わせはアーティストのSNSまでお願いいたします。デュオに関するお問い合わせはどちらのメンバーにいただいてもかまいません。"
        data-en="For performance requests and inquiries, please contact the artist via their social media. Inquiries regarding the duo may be directed to either member.">
     </p>
 
