edited the header area

--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 
 <header>
   <div class="header-inner">
-    <h1 class="lang" data-ja="お問い合わせ" data-en="Contact"></h1>
+    <h1 class="lang" data-ja="ENYANA" data-en="ENYANA"></h1>
     <nav>
       <a href="index.html" class="lang" data-ja="ホーム" data-en="Home"></a>
       <a href="live.html" class="lang" data-ja="ライブ" data-en="Live"></a>
@@ -26,6 +26,7 @@
 
 <main>
   <section class="contact-section fade-in">
+    <h2 class="lang" data-ja="お問い合わせ" data-en="Contact"></h2>
     <p class="lang"
        data-ja="出演依頼・お問い合わせはアーティストのSNSまでお願いいたします。デュオに関するお問い合わせはどちらのメンバーにいただいてもかまいません。"
        data-en="For performance requests and inquiries, please contact the artist via their social media. Inquiries regarding the duo may be directed to either member.">
