--- a/live.html
+++ b/live.html
@@ -11,7 +11,7 @@
 
 <header>
   <div class="header-inner">
-    <h1 class="lang" data-ja="ライブスケジュール" data-en="Live Schedule"></h1>
+    <h1 class="lang" data-ja="ENYANA" data-en="ENYANA"></h1>
     <nav>
       <a href="index.html" class="lang" data-ja="ホーム" data-en="Home"></a>
       <a href="live.html" class="lang" data-ja="ライブ" data-en="Live"></a>
