changed yuka profile

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           <a href="https://www.facebook.com/yuka.yanagihara.79" target="_blank" rel="noopener noreferrer">Facebook</a>
         </p>
         <p class="lang" data-ja="幼少期からJazz, Bossa Nova, Pops 等様々な音楽に触れる。
-米国バークリー音楽大学卒業。ボストン、ニューヨークで演奏後、帰国。現在は関西・関東を中心に全国・海外で活動。"
+米国バークリー音楽大学卒業。ボストン、ニューヨークで演奏後、帰国。現在は関西・関東を中心に全国に加え・フランス、シンガポール、米国など海外で活動。"
            data-en="Exposed to jazz, bossa nova, and pop music from childhood. Graduated from Berklee College of Music. Performs across Japan and internationally, based in Kansai and Kanto."></p>
       </div>
 
