--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ENYANA</title>
+  <meta name="description" content="ピアノとボーカルのデュオENYANA公式サイト。プロフィール、動画、CD、ライブ情報を掲載。">
+  <title>ENYANA Official Site</title>
+  <meta property="og:title" content="ENYANA Official Site">
+  <meta property="og:description" content="ピアノとボーカルのデュオENYANA公式サイト。プロフィール、動画、CD、ライブ情報を掲載。">
+  <meta property="og:image" content="https://enyana-duo.github.io/assets/enyana.jpg">
+  <meta property="og:url" content="https://enyana-duo.github.io">
+  <meta property="og:type" content="website">
   <link rel="stylesheet" href="css/style.css">
   <script src="js/lang.js" defer></script>
 </head>
